--- a/packages/icons/icons.yml
+++ b/packages/icons/icons.yml
@@ -2943,7 +2943,17 @@
     - 32
 - name: chat--launch
   friendly_name: Chat launch
-  aliases: []
+  aliases:
+    - chat
+    - operations
+    - launch
+    - begin
+    - initiate
+    - start
+    - message
+    - text
+    - instant message
+    - communications
   sizes:
     - 32
 - name: chat-bot
@@ -3554,8 +3564,11 @@
     - cloud
     - foundry
 - name: cloud-registry
-  friendly_name: cloud-registry
-  aliases: []
+  friendly_name: Cloud registry
+  aliases:
+    - cloud
+    - registry
+    - data
   sizes:
     - 32
 - name: cloud-satellite
@@ -3752,13 +3765,23 @@
   sizes:
     - 32
 - name: condition--point
-  friendly_name: condition--point
-  aliases: []
+  friendly_name: Condition point
+  aliases:
+    - point
+    - condition
+    - status
+    - state
   sizes:
     - 32
 - name: condition--wait-point
-  friendly_name: condition--wait-point
-  aliases: []
+  friendly_name: Condition wait point
+  aliases:
+    - condition
+    - point
+    - wait
+    - status
+    - waiting
+    - state
   sizes:
     - 32
 - name: connect
@@ -3897,8 +3920,12 @@
   sizes:
     - 32
 - name: cough
-  friendly_name: cough
-  aliases: []
+  friendly_name: Cough
+  aliases:
+    - cough
+    - user
+    - person
+    - coughing
   sizes:
     - 32
 - name: course
@@ -4049,7 +4076,10 @@
     - 32
 - name: currency
   friendly_name: currency
-  aliases: []
+  aliases:
+    - currency
+    - money
+    - commerce
   sizes:
     - 32
 - name: currency--baht
@@ -4059,6 +4089,7 @@
     - money
     - baht
     - finance
+    - commerce
   sizes:
     - 32
 - name: currency--dollar
@@ -4068,6 +4099,7 @@
     - money
     - dollar
     - finance
+    - commerce
   sizes:
     - 32
 - name: currency--euro
@@ -4077,6 +4109,7 @@
     - money
     - euro
     - finance
+    - commerce
   sizes:
     - 32
 - name: currency--lira
@@ -4086,6 +4119,7 @@
     - money
     - lira
     - finance
+    - commerce
   sizes:
     - 32
 - name: currency--pound
@@ -4095,11 +4129,17 @@
     - money
     - pound
     - finance
+    - commerce
   sizes:
     - 32
 - name: currency--ruble
-  friendly_name: currency--ruble
-  aliases: []
+  friendly_name: Currency ruble
+  aliases:
+    - currency
+    - money
+    - ruble
+    - finance
+    - commerce
   sizes:
     - 32
 - name: currency--rupee
@@ -4109,6 +4149,7 @@
     - money
     - rupee
     - finance
+    - commerce
   sizes:
     - 32
 - name: currency--shekel
@@ -4118,6 +4159,7 @@
     - money
     - shekel
     - finance
+    - commerce
   sizes:
     - 32
 - name: currency--won
@@ -4127,6 +4169,7 @@
     - money
     - won
     - finance
+    - commerce
   sizes:
     - 32
 - name: currency--yen
@@ -4136,6 +4179,7 @@
     - money
     - yen
     - finance
+    - commerce
   sizes:
     - 32
 - name: cursor--1
@@ -4181,8 +4225,13 @@
   sizes:
     - 32
 - name: cut-out
-  friendly_name: cut-out
-  aliases: []
+  friendly_name: Cut out
+  aliases:
+    - formatting
+    - cut out
+    - clip
+    - clipping
+    - coupon
   sizes:
     - 32
 - name: cY
@@ -4620,8 +4669,14 @@
   sizes:
     - 32
 - name: desk--adjustable
-  friendly_name: desk--adjustable
-  aliases: []
+  friendly_name: Desk adjustable
+  aliases:
+    - desk
+    - adjustable
+    - standing desk
+    - stand up
+    - technology
+    - workplace
   sizes:
     - 32
 - name: development
@@ -5036,13 +5091,22 @@
     - doc
     - paper
 - name: document--attachment
-  friendly_name: document--attachment
-  aliases: []
+  friendly_name: Document attachment
+  aliases:
+    - file
+    - doc
+    - paper
+    - attachment
+    - paper clip
+    - attach
   sizes:
     - 32
 - name: document--audio
-  friendly_name: document--audio
-  aliases: []
+  friendly_name: Document audio
+  aliases:
+    - doc
+    - file
+    - audio
   sizes:
     - 32
 - name: document--blank
@@ -5103,8 +5167,12 @@
   sizes:
     - 32
 - name: document--sketch
-  friendly_name: document--sketch
-  aliases: []
+  friendly_name: Document Sketch
+  aliases:
+    - doc
+    - file
+    - Sketch
+    - wireframe
   sizes:
     - 32
 - name: document--subtract
@@ -5145,8 +5213,12 @@
   sizes:
     - 32
 - name: document--video
-  friendly_name: document--video
-  aliases: []
+  friendly_name: Document video
+  aliases:
+    - doc
+    - file
+    - video
+    - movie
   sizes:
     - 32
 - name: document--view
@@ -5297,8 +5369,12 @@
   sizes:
     - 32
 - name: drone
-  friendly_name: drone
-  aliases: []
+  friendly_name: Drone
+  aliases:
+    - drone
+    - robot
+    - remote control
+    - unmanned
   sizes:
     - 32
 - name: drop-photo
@@ -6733,13 +6809,26 @@
   sizes:
     - 32
 - name: group--presentation
-  friendly_name: group--presentation
-  aliases: []
+  friendly_name: Group presentation
+  aliases:
+    - group
+    - presentation
+    - meeting
+    - conference
+    - audience
+    - presenter
+    - users
   sizes:
     - 32
 - name: growth
-  friendly_name: growth
-  aliases: []
+  friendly_name: Growth
+  aliases:
+    - growth
+    - chart
+    - data
+    - uptick
+    - rising
+    - improving
   sizes:
     - 32
 - name: H
@@ -7180,8 +7269,14 @@
   sizes:
     - 32
 - name: ice--vision
-  friendly_name: ice--vision
-  aliases: []
+  friendly_name: Ice vision
+  aliases:
+    - ice
+    - vision
+    - visibility
+    - weather
+    - forecast
+    - precipitation
   sizes:
     - 32
 - name: iD
@@ -7240,8 +7335,12 @@
   sizes:
     - 32
 - name: image--copy
-  friendly_name: image--copy
-  aliases: []
+  friendly_name: Image copy
+  aliases:
+    - image
+    - copy
+    - duplicate
+    - file
   sizes:
     - 32
 - name: image--medical
@@ -7811,8 +7910,13 @@
     - language
     - english
 - name: letter--Aa--large
-  friendly_name: letter--Aa--large
-  aliases: []
+  friendly_name: Letter Aa large
+  aliases:
+    - letter
+    - alphabet
+    - language
+    - english
+    - large
   sizes:
     - 32
 - name: letter--Bb
@@ -8460,8 +8564,16 @@
     - tag
     - identification
 - name: logo--discord
-  friendly_name: logo--discord
-  aliases: []
+  friendly_name: Logo Discord
+  aliases:
+    - brand
+    - emblem
+    - id
+    - symbol
+    - avatar
+    - tag
+    - social
+    - discord
   sizes:
     - 32
 - name: logo--facebook
@@ -8517,7 +8629,7 @@
     - tag
     - identification
 - name: logo--google
-  friendly_name: Logo google
+  friendly_name: Logo Google
   sizes:
     - 32
   aliases:
@@ -8593,7 +8705,7 @@
     - tag
     - identification
 - name: logo--medium
-  friendly_name: Logo medium
+  friendly_name: Logo Medium
   sizes:
     - 32
   aliases:
@@ -9008,8 +9120,13 @@
     - 16
     - 32
 - name: media--library
-  friendly_name: media--library
-  aliases: []
+  friendly_name: Media library
+  aliases:
+    - media
+    - library
+    - file
+    - repository
+    - folder
   sizes:
     - 32
 - name: medication
@@ -10866,8 +10983,13 @@
   sizes:
     - 32
 - name: phone--ip
-  friendly_name: phone--ip
-  aliases: []
+  friendly_name: Phone IP
+  aliases:
+    - phone
+    - VOIP
+    - IP
+    - telecommunications
+    - handset
   sizes:
     - 32
 - name: phone--off
@@ -10956,8 +11078,14 @@
   sizes:
     - 32
 - name: piggy-bank--slot
-  friendly_name: piggy-bank--slot
-  aliases: []
+  friendly_name: Piggy bank slot
+  aliases:
+    - piggy bank
+    - savings
+    - cash
+    - money
+    - currency
+    - money slot
   sizes:
     - 32
 - name: pills
@@ -12674,8 +12802,14 @@
   sizes:
     - 32
 - name: sight
-  friendly_name: sight
-  aliases: []
+  friendly_name: Sight
+  aliases:
+    - sight
+    - vision
+    - see
+    - eyescan
+    - visual
+    - user
   sizes:
     - 32
 - name: sigma
@@ -13066,13 +13200,21 @@
   sizes:
     - 32
 - name: sort--ascending
-  friendly_name: sort--ascending
-  aliases: []
+  friendly_name: Sort ascending
+  aliases:
+    - sort order
+    - order
+    - ascending
+    - operations
   sizes:
     - 32
 - name: sort--descending
-  friendly_name: sort--descending
-  aliases: []
+  friendly_name: Sort descending
+  aliases:
+    - sort order
+    - order
+    - descending
+    - operations
   sizes:
     - 32
 - name: spell-check
@@ -13900,8 +14042,11 @@
     - alphabet
     - editor
 - name: text--clear-format
-  friendly_name: text--clear-format
-  aliases: []
+  friendly_name: Text clear format
+  aliases:
+    - clear
+    - format
+    - text
   sizes:
     - 32
 - name: text--color
@@ -15236,8 +15381,12 @@
   sizes:
     - 32
 - name: voice-activate
-  friendly_name: voice-activate
-  aliases: []
+  friendly_name: Voice activate
+  aliases:
+    - voice
+    - activate
+    - user
+    - input
   sizes:
     - 32
 - name: voicemail
@@ -15255,9 +15404,14 @@
   aliases:
     - sound
     - noise
+    - soft
 - name: volume--down--alt
-  friendly_name: volume--down--alt
-  aliases: []
+  friendly_name: Volume down alt
+  aliases:
+    - volume
+    - sound
+    - noise
+    - soft
   sizes:
     - 32
 - name: volume--down--filled
@@ -15267,9 +15421,14 @@
   aliases:
     - sound
     - noise
+    - soft
 - name: volume--down--filled--alt
-  friendly_name: volume--down--filled--alt
-  aliases: []
+  friendly_name: Volume down filled alt
+  aliases:
+    - volume
+    - sound
+    - noise
+    - soft
   sizes:
     - 32
 - name: volume--mute
@@ -15294,8 +15453,11 @@
     - sound
     - noise
 - name: volume--up--alt
-  friendly_name: volume--up--alt
-  aliases: []
+  friendly_name: Volume up alt
+  aliases:
+    - sound
+    - noise
+    - loud
   sizes:
     - 32
 - name: volume--up--filled
@@ -15305,9 +15467,13 @@
   aliases:
     - sound
     - noise
+    - loud
 - name: volume--up--filled--alt
-  friendly_name: volume--up--filled--alt
-  aliases: []
+  friendly_name: Volume up filled alt
+  aliases:
+    - sound
+    - noise
+    - loud
   sizes:
     - 32
 - name: VPN
@@ -15818,8 +15984,13 @@
   sizes:
     - 32
 - name: zoom--area
-  friendly_name: zoom--area
-  aliases: []
+  friendly_name: Zoom area
+  aliases:
+    - expand
+    - inspect
+    - size
+    - enlarge
+    - detail
   sizes:
     - 32
 - name: zoom--in
