--- a/config/storybook-preset-carbon/package.json
+++ b/config/storybook-preset-carbon/package.json
@@ -1,7 +1,7 @@
 {
   "name": "storybook-preset-carbon",
   "private": true,
-  "version": "0.5.0-rc.0",
+  "version": "0.5.0",
   "license": "Apache-2.0",
   "main": "index.js",
   "repository": {
