refactor(project): update enable-2021-release to enable-v11-release (#8660)
* refactor(project): update enable-2021-release to enable-v11-release

* fix(toggle): rename v11 release flag

Co-authored-by: Taylor Jones <tay1orjones@users.noreply.github.com>
Co-authored-by: Taylor Jones <taylor.jones826@gmail.com>

--- a/packages/feature-flags/feature-flags.yml
+++ b/packages/feature-flags/feature-flags.yml
@@ -18,7 +18,7 @@ feature-flags:
     description: >
       Enable CSS Grid Layout in the Grid and Column React components
     enabled: false
-  - name: enable-2021-release
+  - name: enable-v11-release
     description: >
-      Enable the features and functionality for the 2021 Release
+      Enable the features and functionality for the v11 Release
     enabled: false
