--- a/packages/carbon-react/package.json
+++ b/packages/carbon-react/package.json
@@ -31,7 +31,8 @@
   "scripts": {
     "build": "yarn clean && node tasks/build.js",
     "clean": "rimraf es lib",
-    "postinstall": "carbon-telemetry collect --install"
+    "postinstall": "carbon-telemetry collect --install",
+    "storybook": "start-storybook -p 3000"
   },
   "peerDependencies": {
     "react": "^16.8.6 || ^17.0.1",
@@ -56,15 +57,31 @@
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^18.0.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
+    "@storybook/addon-actions": "^6.2.9",
+    "@storybook/addon-docs": "^6.2.9",
+    "@storybook/addon-essentials": "^6.2.9",
+    "@storybook/react": "^6.2.9",
+    "@storybook/theming": "^6.2.9",
+    "autoprefixer": "^10.2.5",
+    "babel-loader": "^8.2.2",
     "babel-plugin-dev-expression": "^0.2.2",
     "browserslist-config-carbon": "^10.6.1",
+    "css-loader": "^5.2.4",
+    "mini-css-extract-plugin": "^1.6.0",
+    "postcss": "^8.2.14",
+    "postcss-custom-properties": "^11.0.0",
+    "postcss-loader": "4",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "rimraf": "^3.0.2",
     "rollup": "^2.46.0",
     "rollup-plugin-strip-banner": "^2.0.0",
-    "sass": "^1.32.12"
+    "rtlcss": "^3.1.2",
+    "sass": "^1.32.12",
+    "sass-loader": "10",
+    "style-loader": "^2.0.0",
+    "webpack": "4"
   },
   "sideEffects": [
     "es/feature-flags.js",
