--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -79,11 +79,12 @@
     "@rollup/plugin-commonjs": "^18.0.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@rollup/plugin-replace": "^2.4.2",
-    "@storybook/addon-storysource": "^5.3.19",
-    "@storybook/addons": "^5.3.19",
-    "@storybook/react": "^5.3.19",
-    "@storybook/source-loader": "^5.3.19",
-    "@storybook/theming": "^6.1.18",
+    "@storybook/addon-actions": "^5.3.21",
+    "@storybook/addon-storysource": "^5.3.21",
+    "@storybook/addons": "^5.3.21",
+    "@storybook/react": "^5.3.21",
+    "@storybook/source-loader": "^5.3.21",
+    "@storybook/theming": "^6.2.9",
     "babel-loader": "^8.2.2",
     "babel-plugin-dev-expression": "^0.2.2",
     "babel-plugin-react-docgen": "^4.2.1",
