--- a/packages/carbon-react/package.json
+++ b/packages/carbon-react/package.json
@@ -86,5 +86,8 @@
   "sideEffects": [
     "es/feature-flags.js",
     "lib/feature-flags.js"
-  ]
+  ],
+  "installConfig": {
+    "hoistingLimits": "workspaces"
+  }
 }
