--- a/package.json
+++ b/package.json
@@ -7,15 +7,12 @@
   "engines": {
     "node": ">=12.x"
   },
-  "workspaces": {
-    "packages": [
-      "actions/*",
-      "codemods",
-      "config/*",
-      "packages/*"
-    ],
-    "nohoist": []
-  },
+  "workspaces": [
+    "actions/*",
+    "codemods",
+    "config/*",
+    "packages/*"
+  ],
   "scripts": {
     "build": "lerna run build --stream --prefix --npm-client yarn",
     "ci-check": "carbon-cli ci-check",
@@ -37,12 +34,12 @@
     "react-test-renderer": "~16.9.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.0",
+    "@babel/core": "^7.14.2",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/plugin-proposal-export-default-from": "^7.12.13",
-    "@babel/plugin-proposal-export-namespace-from": "^7.12.13",
-    "@babel/plugin-transform-runtime": "^7.13.15",
-    "@babel/preset-env": "^7.14.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.14.2",
+    "@babel/plugin-transform-runtime": "^7.14.2",
+    "@babel/preset-env": "^7.14.2",
     "@babel/preset-react": "^7.13.13",
     "@babel/runtime": "^7.14.0",
     "@carbon/cli": "workspace:packages/cli",
