--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,7 +1,7 @@
 {
   "name": "carbon-components-react",
   "description": "The Carbon Design System is IBM’s open-source design system for products and experiences.",
-  "version": "7.35.0",
+  "version": "7.36.0-rc.0",
   "license": "Apache-2.0",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -45,8 +45,8 @@
     "react-dom": "^16.8.6 || ^17.0.1"
   },
   "dependencies": {
-    "@carbon/feature-flags": "^0.4.0",
-    "@carbon/icons-react": "^10.32.0",
+    "@carbon/feature-flags": "^0.5.0-rc.0",
+    "@carbon/icons-react": "^10.33.0-rc.0",
     "@carbon/telemetry": "0.0.0-alpha.6",
     "classnames": "2.3.1",
     "copy-to-clipboard": "^3.3.1",
@@ -74,7 +74,7 @@
     "@babel/plugin-transform-object-assign": "^7.12.13",
     "@babel/preset-env": "^7.14.2",
     "@babel/preset-react": "^7.13.13",
-    "@carbon/test-utils": "^10.15.0",
+    "@carbon/test-utils": "^10.16.0-rc.0",
     "@cypress/react": "^5.4.0",
     "@cypress/webpack-dev-server": "^1.1.5",
     "@percy/cypress": "^3.1.0",
@@ -99,7 +99,7 @@
     "babel-plugin-react-docgen": "^4.2.1",
     "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "browserslist-config-carbon": "^10.6.1",
-    "carbon-components": "^10.35.0",
+    "carbon-components": "^10.36.0-rc.0",
     "carbon-icons": "^7.0.5",
     "chalk": "^2.3.0",
     "cli-table": "^0.3.0",
