--- a/packages/type/package.json
+++ b/packages/type/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@carbon/type",
   "description": "Typography for digital and software products using the Carbon Design System",
-  "version": "10.28.0",
+  "version": "10.29.0-rc.0",
   "license": "Apache-2.0",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -37,11 +37,11 @@
   },
   "dependencies": {
     "@carbon/import-once": "^10.6.0",
-    "@carbon/layout": "^10.24.0"
+    "@carbon/layout": "^10.25.0-rc.0"
   },
   "devDependencies": {
-    "@carbon/cli": "^10.23.0",
-    "@carbon/test-utils": "^10.15.0",
+    "@carbon/cli": "^10.24.0-rc.0",
+    "@carbon/test-utils": "^10.16.0-rc.0",
     "change-case": "^4.1.1",
     "rimraf": "^3.0.0"
   },
